--- a/Templates/index.html
+++ b/Templates/index.html
@@ -21,6 +21,7 @@
 <body>
 <a href="{% url 'gallery' %}">Gallery</a>
 <a href="{% url 'about' %}">About</a>
+<a href="{% url 'form' %}">Form</a>
 
 <marquee behavior="" direction=""><h1>ShopDish App</h1></marquee>
 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A at beatae cupiditate eaque expedita explicabo ipsa libero nesciunt perferendis porro quaerat quia, quibusdam rerum, sunt suscipit temporibus ullam, voluptatem voluptatum.</span><span>Ab accusantium ad alias blanditiis corporis distinctio dolore doloribus earum eligendi eveniet ex expedita explicabo impedit inventore, iste nihil nostrum odit optio perspiciatis quo rem ullam veritatis voluptate. Fugit, repellat.</span></p>
